# Experimentation

./: README.md
email-to-jira/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  requirements.txt
email-to-jira/app/: auth.py  deps.py  main.py
email-to-jira/core/: adf.py  audit.py  config.py  db.py  docgen.py  generate.py  gmail_client.py  ingest.py  jira_client.py  llm.py  models.py  projects.py  review.py  router.py  transcripts.py  viz.py
email-to-jira/projects/: KBS.yaml  MS.yaml  MSA.yaml  NAMA.yaml  OLAW.yaml  OR.yaml  PV0.yaml  _TEMPLATE.yaml
email-to-jira/prompts/: global_rules.md  output_schema.md
email-to-jira/scripts/: harness.py  poller.py
email-to-jira/tests/: conftest.py  fakes.py  test_dashboard.py  test_generate.py  test_ingest.py  test_poller_and_harness.py  (+1 more)
hft-agent/: .env.example  .gitignore  HOSTING.md  SESSION_TRANSCRIPT.md  main.py  pyproject.toml
hft-agent/backtest/: engine.py
hft-agent/brokers/: __init__.py  alpaca_broker.py  base.py  ibkr.py  robinhood.py
hft-agent/config/: settings.yaml
hft-agent/core/probability/: __init__.py  distributions.py  tail_estimator.py
hft-agent/core/risk/: __init__.py  fragility.py  kelly.py  manager.py
hft-agent/core/signals/: __init__.py  aggregator.py  hurst.py  multifractal.py  ofi.py  vpin.py
hft-agent/data/feeds/: alpaca_feed.py  base.py
hft-agent/data/storage/: redis_cache.py  timescale.py
hft-agent/deploy/: Dockerfile  docker-compose.yml  prometheus.yml
hft-agent/execution/: engine.py
hft-agent/strategies/: adaptive_microstructure.py
hft-agent/tests/: test_probability.py  test_risk.py  test_signals.py
hft-agent/utils/: config.py  logging.py  types.py
pearme-ocean-prototype/: index.html  package-lock.json  package.json
(+23 files in other folders)
