[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hft-agent"
version = "0.1.0"
description = "High-Frequency Trading Agent with Fat-Tail Aware Risk Management"
requires-python = ">=3.11"
dependencies = [
    # Broker APIs
    "robin_stocks>=3.0.0",
    "alpaca-trade-api>=3.0.0",
    "ib_insync>=0.9.86",

    # Data & Numerics
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",

    # Statistics & Probability
    "arch>=6.2.0",
    "statsmodels>=0.14.0",
    "hurst>=0.0.5",

    # Time-series database
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # Real-time data feeds
    "websockets>=12.0",
    "aiohttp>=3.9.0",

    # ML & Signal Processing
    "scikit-learn>=1.4.0",

    # Async & Performance
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "orjson>=3.9.0",

    # Logging & Monitoring
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
hft-agent = "hft_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
